--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-status-codes": "2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-helmet-async": "1.3.0",
     "react-redux": "8.1.1",
     "react-router-dom": "6.14.0"
